<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.consumption.ConsumptionFragment">

    <EditText
        android:id="@+id/odo2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="2. Odometer (i.e. 150km)"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toEndOf="@+id/odo1"
        app:layout_constraintStart_toStartOf="@+id/odo1"
        app:layout_constraintTop_toBottomOf="@+id/odo1" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="128dp"
        android:text="Enter odometer and fuel"
        android:textSize="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="64dp"
        android:text="©Hochschule Harz"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/odo1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:ems="10"
        android:hint="1. Odometer (i.e. 100km)"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toEndOf="@+id/textView3"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <EditText
        android:id="@+id/fuelVol"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="Fuel (i.e. 20L)"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toEndOf="@+id/odo2"
        app:layout_constraintStart_toStartOf="@+id/odo2"
        app:layout_constraintTop_toBottomOf="@+id/odo2" />

    <Button
        android:id="@+id/calculateButton"
        android:layout_width="209dp"
        android:layout_height="52dp"
        android:layout_marginTop="24dp"
        android:text="Calculate"
        app:layout_constraintEnd_toEndOf="@+id/fuelVol"
        app:layout_constraintStart_toStartOf="@+id/fuelVol"
        app:layout_constraintTop_toBottomOf="@+id/fuelVol" />
</androidx.constraintlayout.widget.ConstraintLayout>