<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.consumption.ConsumptionFragment">

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="360dp"
        android:layout_height="56dp"
        android:layout_marginTop="64dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3">

        <Button
            android:id="@+id/mpgButton"
            android:layout_width="190dp"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:text="Calculate MPG"
            tools:layout_editor_absoluteX="155dp"
            tools:layout_editor_absoluteY="6dp" />

        <EditText
            android:id="@+id/literKilo"
            android:layout_width="151dp"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="-1dp"
            android:layout_marginEnd="20dp"
            android:ems="10"
            android:hint="i.e. 7.5L/100km"
            android:inputType="numberDecimal"
            app:layout_constraintEnd_toStartOf="@+id/mpgButton"
            tools:layout_editor_absoluteY="251dp" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="360dp"
        android:layout_height="56dp"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout">

        <Button
            android:id="@+id/kiloButton"
            android:layout_width="190dp"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:text="Calculate L/100km"
            tools:layout_editor_absoluteX="155dp"
            tools:layout_editor_absoluteY="6dp" />

        <EditText
            android:id="@+id/MPG"
            android:layout_width="151dp"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="-1dp"
            android:layout_marginEnd="20dp"
            android:ems="10"
            android:hint="i.e. 20MPG"
            android:inputType="numberDecimal"
            app:layout_constraintEnd_toStartOf="@+id/kiloButton"
            tools:layout_editor_absoluteY="251dp" />

    </RelativeLayout>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="128dp"
        android:text="Enter consumption"
        android:textSize="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="64dp"
        android:text="©Hochschule Harz"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>