<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_consumption"
            android:icon="@drawable/ic_consumption"
            android:title="@string/menu_consumption" />

        <item
            android:id="@+id/nav_convert"
            android:icon="@drawable/ic_convert"
            android:title="@string/menu_convert" />
    </group>

    <item android:title="Tell your friends!">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_share"
                android:title="@string/menu_share" />

            <item
                android:id="@+id/nav_rate"
                android:icon="@drawable/ic_rate"
                android:title="@string/menu_rate" />

            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_about"
                android:title="@string/menu_about" />
        </menu>
    </item>
</menu>