<resources>
    <string name="app_name">m27597 Fuel App</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Fuel App</string>
    <string name="nav_header_subtitle">By Aleixo Alonso</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_about">About</string>
    <string name="menu_consumption">Consumption</string>
    <string name="menu_convert">Convert</string>
    <string name="menu_share">Share</string>
    <string name="menu_rate">Rate</string>

    <string name="text_multi1">"Made by Aleixo Alonso/ m27597/ u35153."</string>
    <string name="text_multi2">"This application lets the you calculate your vehicle's fuel consumption. You can also convert fuel prices into different currencies and from miles-per-gallon to liters-per-100km. To calculate fuel consumption, simply enter the odometer value of your previous refill, then the odometer value of your last value. The volume of fuel used and the distance travelled is used to calculate your consumption."</string>

</resources>